getting rid of anys wip